# Expenses

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml
server/: Cargo.toml  Dockerfile
server/migration/src/: lib.rs  m20250829_131244_create_accounts.rs  m20250829_141149_create_transactions.rs  m20250901_083712_create_categories.rs  m20250901_142239_create_rules.rs  m20250903_143112_create_account_rule.rs  m20250903_152750_create_budget.rs  m20250919_160321_create_settings.rs
server/scripts/: docker-entrypoint.sh
server/src/: main.rs
server/src/database/: accounts.rs  mod.rs
server/src/routes/: account_budgets.rs  account_detail.rs  account_index.rs  account_rules.rs  account_settings.rs  account_transactions.rs  accounts.rs  backup.rs  budgets.rs  categories.rs  common.rs  index.rs  mod.rs  report.rs  routes.rs  rules.rs  settings.rs  transactions.rs  uploader.rs  utilities.rs
server/static/: script.js  style.css  styles.css
server/static/css/: base.css  button.css  cards.css  charts.css  content.css  dropzone.css  forms.css  loader.css  modal.css  navbar.css  preview.css  progress.css  rule.css  search.css  stats.css  sub-navbar.css  switch.css  tables.css  theme.css
server/static/js/: charts.js  modals.js  rules.js  table.js  (+1 more)
server/templates/: account_budgets.html  account_detail.html  account_index.html  account_rules.html  account_settings.html  account_transactions.html  accounts.html  base.html  base_account.html  budgets.html  categories.html  index.html  new_account.html  rules.html  settings.html  transactions.html  utilities.html
(+12 files in other folders)
