[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
dotenvy = "0.15"
askama = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
futures = "0.3.28"
anyhow = "1.0.99"
chrono = "0.4.42"
regex = "1.11.2"
